WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279718
[IPC] Fix -Wmissing-designated-field-initializers warning in IPCStreamTester.cpp
https://bugs.webkit.org/show_bug.cgi?id=279718
Summary
[IPC] Fix -Wmissing-designated-field-initializers warning in IPCStreamTester.cpp
David Kilzer (:ddkilzer)
Reported
2024-09-14 11:49:14 PDT
Fix -Wmissing-designated-field-initializers warning in IPCStreamTester.cpp found by upstream clang. Source/WebKit/Shared/IPCStreamTester.cpp:153:5: warning: missing field 'version' initializer [-Wmissing-designated-field-initializers] 153 | }; | ^ 1 warning generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-14 11:49:28 PDT
<
rdar://problem/136014113
>
David Kilzer (:ddkilzer)
Comment 2
2024-09-14 13:44:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33666
David Kilzer (:ddkilzer)
Comment 3
2024-09-17 04:39:49 PDT
Committed
283762@main
(1dbf4cd):
https://commits.webkit.org/283762@main
Reviewed commits have been landed. Closing PR #33666 and removing active labels.
David Kilzer (:ddkilzer)
Comment 4
2024-12-04 11:30:29 PST
<
rdar://problem/140927293
>
David Kilzer (:ddkilzer)
Comment 5
2024-12-04 11:32:36 PST
<
rdar://136014113
>
EWS
Comment 6
2024-12-04 13:45:27 PST
Committed
283286.563@safari-7620-branch
(24c810821167): <
https://commits.webkit.org/283286.563@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2374 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug