[IPC] Fix -Wmissing-designated-field-initializers warning in IPCStreamTester.cpp <https://bugs.webkit.org/show_bug.cgi?id=279718> <rdar://136014113>

Reviewed by Kimmo Kinnunen.

* Source/WebKit/Shared/IPCStreamTester.cpp:
(WebKit::IPCStreamTester::checkAutoreleasePool):
- Initialize all fields in CFArrayCallBacks.

Canonical link: https://commits.webkit.org/283762@main